[gd_scene load_steps=5 format=3 uid="uid://dtfi71q3hqh7v"]

[ext_resource type="Script" path="res://script/top_bot.gd" id="1_vkx84"]
[ext_resource type="Texture2D" uid="uid://ct38ov3k8iimw" path="res://assets/Asset 1.png" id="2_kkbyq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v61r8"]
size = Vector2(3837, 237)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwt5n"]
size = Vector2(3837, 237)

[node name="TopBot" type="Node2D"]
z_index = 5
script = ExtResource("1_vkx84")

[node name="TopP" type="Area2D" parent="."]
position = Vector2(-960, -540)
rotation = 3.14159
metadata/_edit_group_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TopP"]
position = Vector2(-1919, 59.5003)
shape = SubResource("RectangleShape2D_v61r8")

[node name="Asset1" type="Sprite2D" parent="TopP"]
position = Vector2(-1919, 5.00006)
texture = ExtResource("2_kkbyq")

[node name="BottomP" type="Area2D" parent="."]
position = Vector2(-960, 540)
metadata/_edit_group_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BottomP"]
position = Vector2(1918.5, 59.5)
shape = SubResource("RectangleShape2D_gwt5n")

[node name="Asset1" type="Sprite2D" parent="BottomP"]
position = Vector2(1919, 5)
texture = ExtResource("2_kkbyq")

[connection signal="body_entered" from="TopP" to="." method="_on_body_entered"]
[connection signal="body_entered" from="BottomP" to="." method="_on_body_entered"]
